--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -108,6 +108,16 @@ body {
     position: relative;
     overflow: hidden;
   }
+  .card-title {
+    font-size: 2.25rem;
+    margin: 0;
+  }
+  .card-body {
+    padding: 1.75em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
