--- a/product-preview-card-component-main/style.scss
+++ b/product-preview-card-component-main/style.scss
@@ -101,8 +101,15 @@ body {
             position: relative;
             overflow: hidden;
         }
-        &-img {
-
+        &-title {
+            font-size: 2.25rem;
+            margin: 0;
+        }
+        &-body {
+            padding: 1.75em;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
         }
     }
 }
