--- a/interactive-rating-component-main/style.scss
+++ b/interactive-rating-component-main/style.scss
@@ -85,6 +85,7 @@ body {
         color: var(--white);
         line-height: 2.5;
         font-size: 1.5rem;
+        font-weight: bold;
     }
     &-body {
         color: var(--light-grey);
