--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
   font-size: 15px;
   font-family: "Outfit", sans-serif;
   padding-top: 2rem;
+  background-color: hsl(30deg, 38%, 92%);
 }
 
 .flex {
@@ -48,6 +49,44 @@ body {
 }
 .sect-title {
   margin-bottom: 1rem;
+}
+
+.lightbox {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.85);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.lightbox[hidden] {
+  display: none;
+}
+.lightbox-focus {
+  max-width: 80%;
+}
+
+.link-hover {
+  position: relative;
+}
+.link-hover:hover::after {
+  display: flex;
+}
+.link-hover::after {
+  content: "View in browser";
+  color: orange;
+  text-decoration: underline orange;
+  font-size: 3rem;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background: rgba(255, 255, 255, 0.65);
+  z-index: 2;
+  position: absolute;
+  inset: 0;
 }
 
 /*# sourceMappingURL=index.css.map */
