--- a/3-column-preview-card-component-main/style.css
+++ b/3-column-preview-card-component-main/style.css
@@ -39,6 +39,38 @@ body {
 .card {
   background-color: var(--dark-cyan);
   color: white;
+  font-size: 1rem;
+  display: flex;
+  flex-direction: column;
+  height: 435px;
+  padding: 2.75rem 2.75em;
+  line-height: 1;
+}
+.card-head {
+  flex: 1 0 auto;
+}
+.card-body {
+  flex: 1 0 50%;
+  display: flex;
+  flex-direction: column;
+}
+.card-title {
+  font-size: 2.5rem;
+}
+.card-text {
+  line-height: 1.7;
+  font-size: 0.95rem;
+  color: var(--transparent-white);
+  margin: auto 0;
+}
+.card-footer {
+  flex: 1 0 25%;
+}
+.card-cta {
+  color: var(--dark-cyan);
+  background: white;
+  border-radius: 2em;
+  padding: 1em 2em;
 }
 
 /*# sourceMappingURL=style.css.map */
