--- a/3-column-preview-card-component-main/style.scss
+++ b/3-column-preview-card-component-main/style.scss
@@ -37,4 +37,36 @@ body {
 .card {
     background-color: var(--dark-cyan);
     color: white;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    height: 435px;
+    padding: 2.75rem 2.75em;
+    line-height: 1;
+    &-head {
+        flex: 1 0 auto;
+    }
+    &-body {
+        flex: 1 0 50%;
+        display: flex;
+        flex-direction: column;
+    }
+    &-title {
+        font-size: 2.5rem;
+    }
+    &-text {
+        line-height: 1.7;
+        font-size: .95rem;
+        color: var(--transparent-white);
+        margin: auto 0;
+    }
+    &-footer {
+        flex: 1 0 25%;
+    }
+    &-cta {
+        color: var(--dark-cyan);
+        background: white;
+        border-radius: 2em;
+        padding: 1em 2em;
+    }
 }
