--- a/3-column-preview-card-component-main/style.css
+++ b/3-column-preview-card-component-main/style.css
@@ -37,7 +37,6 @@ body {
 }
 
 .card {
-  background-color: var(--dark-cyan);
   color: white;
   font-size: 1rem;
   display: flex;
@@ -45,6 +44,16 @@ body {
   height: 435px;
   padding: 2.75rem 2.75em;
   line-height: 1;
+  background-color: var(--primary);
+}
+.card.--dark-cyan {
+  --primary: var(--dark-cyan);
+}
+.card.--orange {
+  --primary: var(--orange);
+}
+.card.--dark {
+  --primary: var(--v-dark-cyan);
 }
 .card-head {
   flex: 1 0 auto;
@@ -56,6 +65,7 @@ body {
 }
 .card-title {
   font-size: 2.5rem;
+  text-transform: uppercase;
 }
 .card-text {
   line-height: 1.7;
@@ -68,6 +78,7 @@ body {
 }
 .card-cta {
   color: var(--dark-cyan);
+  color: var(--primary);
   background: white;
   border-radius: 2em;
   padding: 1em 2em;
