finish 3-column-card

--- a/3-column-preview-card-component-main/style.scss
+++ b/3-column-preview-card-component-main/style.scss
@@ -19,20 +19,30 @@ body {
 .center-it {
     position: fixed;
     top: 50%;
-    left: 100%;
-    transform: translate(-100%, -50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
     display: inline-block;
 }
 .center-it-2 {
     position: fixed;
-    top: 50%;
+    top: -19%;
     left: 0;
-    transform: translate(0, -50%);
+    transform: translate(0, 0%);
     display: inline-block;
 }
 
 .card-container {
     width: calc(375px - 50px);
+    @media only screen and (min-width: 768px) {
+        flex-direction: row;
+        display: flex;
+        width: 920px;
+        border-radius: 0.5em;
+        overflow: hidden;
+        .card {
+            flex: 1 1 33.33%;
+        }
+    }
 }
 .card {
     color: white;
@@ -79,5 +89,11 @@ body {
         background: white;
         border-radius: 2em;
         padding: 1em 2em;
+    }
+    @media only screen and (min-width: 768px) {
+        height: 500px;
+        &-head {
+            flex: .5 0 auto;
+        }
     }
 }
