--- a/newsletter-sign-up-main/styles.scss
+++ b/newsletter-sign-up-main/styles.scss
@@ -13,86 +13,7 @@ todo: active states on mobile and not
 
 /* typography */
 
-.title {
-    font-size: 40px;
-    line-height: 1;
-
-    @media only screen and (min-width: 504px) {
-        font-size: 56px;
-    }
-}
-
-.body {
-    font-size: 16px;
-}
-
-.bold {
-    font-weight: bold;
-}
-
-.body-small {
-    font-size: 12px;
-}
-
-.input-group {
-    &.has-error {
-        .input-error {
-            display: block;
-        }
-
-        .input {
-            color: var(--vermillion);
-            border-color: rgba(255, 97, 85, 1);
-            background-color: rgba(255, 97, 85, .15);
-        }
-    }
-
-    .input-label-group {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    .label {
-        margin-bottom: 8px;
-    }
-
-    .input-error {
-        display: none;
-    }
-
-    .input {
-        padding: 16px 24px;
-        border: 1px solid rgba(25, 24, 43, .25);
-        cursor: pointer;
-
-        &:focus {
-            border-color: var(--dark-navy);
-            color: var(--dark-navy);
-        }
-
-        &::placeholder {
-            color: var(--grey-25);
-        }
-    }
-}
-
 /* utility */
-
-.--rounded {
-    border-radius: 8px;
-}
-
-.--w-100 {
-    width: 100%;
-}
-
-.--hide {
-    display: none !important;
-}
-
-.drop-shadow {
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, .25);
-}
 
 /* color */
 
@@ -105,186 +26,6 @@ todo: active states on mobile and not
 }
 
 /* color */
-.c {
-    &-vermillion {
-        color: var(--vermillion);
-    }
+.c {}
 
-    &-grey-25 {
-        color: var(--grey-25);
-        opacity: .25;
-    }
-
-    &-dark-navy {
-        color: var(--dark-navy);
-    }
-
-    &-pale-navy {
-        color: var(--pale-navy);
-    }
-
-    &-white {
-        color: var(--white);
-    }
-}
-
-.bg {
-    &-vermillion {
-        background-color: var(--vermillion);
-    }
-
-    &-grey-25 {
-        background-color: var(--grey-25);
-    }
-
-    &-dark-navy {
-        background-color: var(--dark-navy);
-    }
-
-    &-pale-navy {
-        background-color: var(--pale-navy);
-    }
-}
-
-.--o {
-    &-50 {
-        opacity: .5;
-    }
-}
-
-.--block {
-    display: block;
-}
-
-.submit {
-    padding: 18px 47px 14px;
-    text-align: center;
-    cursor: pointer;
-
-    &:hover,
-    &:active {
-        background-image: linear-gradient(to left bottom, #FF6A3A, #FF527B);
-        filter: drop-shadow(0 4px 4px rgba(0, 0, 0, .25));
-    }
-
-    &-icon {
-        width: 64px;
-        height: 64px;
-        background-image: linear-gradient(#FF6A3A, #FF527B);
-        border-radius: 100%;
-    }
-
-    /* bandaid dismiss msg is 2px off xd */
-    &-nudge {
-        position: relative;
-        top: 2px;
-    }
-}
-
-.success-container,
-.modal-container {
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-
-    height: 100%;
-    width: 375px;
-    /* remove? */
-    height: 842px;
-
-    display: flex;
-    flex-direction: column;
-
-    margin: 0 auto;
-    background: white;
-
-    @media only screen and (min-width: 504px) {
-        bottom: 0;
-        border-radius: 36px;
-        margin: auto auto;
-    }
-}
-
-.success {
-    &-container {
-        padding: 150px 24px 40px 24px;
-        justify-content: space-between;
-
-        @media only screen and (min-width: 504px) {
-            height: 520px;
-            width: 504px;
-
-            padding: 48px 64px 64px 64px;
-        }
-    }
-}
-
-.modal {
-    &-container {
-        .modal-banner {
-            height: 284px;
-
-            img {
-                object-fit: cover;
-            }
-
-            @media only screen and (min-width: 504px) {
-                height: 100%;
-                padding: 24px 24px 24px 0;
-
-                order: 2;
-                flex: 0 0 400px;
-
-                img {
-                    height: 100%;
-                    border-radius: 16px;
-                }
-            }
-        }
-
-        @media only screen and (min-width: 504px) {
-            width: 928px;
-            height: 640px;
-            flex-direction: row;
-        }
-
-        .modal-body {
-            flex: 1 0 auto;
-            padding: 40px 24px;
-
-            @media only screen and (min-width: 504px) {
-                flex: 0 1 auto;
-                padding: 98px 64px;
-            }
-        }
-    }
-
-    &-banner {}
-}
-
-.--spacing {
-    margin-bottom: 24px;
-}
-
-.--spacing-big {
-    margin-bottom: 40px;
-}
-
-.list {
-    &-item {
-        display: flex;
-        margin-bottom: 10px;
-    }
-
-    &-icon {
-        width: 21px;
-        height: 21px;
-        margin-right: 16px;
-
-        background: var(--vermillion);
-        border-radius: 100%;
-
-        position: relative;
-    }
-}
+.bg {}
