--- a/newsletter-sign-up-main/styles.scss
+++ b/newsletter-sign-up-main/styles.scss
@@ -12,6 +12,22 @@ todo: active states on mobile and not
 }
 
 /* typography */
+.title {
+    font-size: 40px;
+    line-height: 1;
+}
+
+.body {
+    font-size: 16px;
+}
+
+.body-small {
+    font-size: 12px;
+}
+
+.bold {
+    font-weight: bold;
+}
 
 /* utility */
 
