--- a/newsletter-sign-up-main/styles.scss
+++ b/newsletter-sign-up-main/styles.scss
@@ -39,6 +39,14 @@ todo: active states on mobile and not
     --dark-navy: #36384D;
     --pale-navy: #36384D;
     --white: #FFF;
+
+    --pad-40: 40px;
+    --pad-24: 24px;
+    --pad-10: 10px;
+
+    --mobile-height: 842px;
+    --mobile-width: 375px;
+    --mobile-banner-height: 284px;
 }
 
 /* color */
