--- a/newsletter-sign-up-main/styles.scss
+++ b/newsletter-sign-up-main/styles.scss
@@ -146,6 +146,14 @@ todo: active states on mobile and not
     &-group {}
 }
 
+.list {
+    &-item {
+        svg {
+            margin-right: 16px;
+        }
+    }
+}
+
 .text-shadow {
     text-shadow: 0 4px 4px rgba(0, 0, 0, .25);
 }
